changed height on each row to fix overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -115,7 +115,7 @@ $turquoise: #35C5B4;
             /*Read Me Section*/
             .readme-container {
                 width: 40%;
-                height: 50%;
+                height: 40%;
 
                 /* Read Me Popup Container */
                 .popup {
@@ -216,7 +216,7 @@ $turquoise: #35C5B4;
             /*Icon section*/
             .icon-container {
                 width: 60%;
-                height: 50%;
+                height: 40%;
                 text-align: right;
             }
 
